Fix example, change badge gap

--- a/src/components/Badge/badge.scss
+++ b/src/components/Badge/badge.scss
@@ -4,7 +4,7 @@
   --vui-badge-font-size: var(--font-size-s);
 
   display: inline-flex;
-  gap: var(--space-s);
+  gap: var(--space-xxs);
   place-items: center;
   padding-inline: var(--vui-badge-padding-inline);
   padding-block: var(--vui-badge-padding-block);
